--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,26 +17,16 @@
         android:theme="@style/AppTheme" >
         <uses-library android:name="com.google.android.maps" />
         <activity
-            android:name="com.mdfws.teatherus.ItemListActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name="com.mdfws.teatherus.ItemDetailActivity"
-            android:label="@string/title_item_detail"
-            android:parentActivityName=".ItemListActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ItemListActivity" />
-        </activity>
-        <activity
             android:name="com.mdfws.teatherus.NavigationActivity"
             android:label="@string/title_activity_navigation" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+       <meta-data 
+           android:name="com.google.android.maps.v2.API_KEY"
+           android:value="AIzaSyA1qV_dY9Pqj9CR-ccEn7tbC9nA_3F0cKI" />"
     </application>
 
 </manifest>
