--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,14 +15,12 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:allowBackup="true" >
         <uses-library android:name="com.google.android.maps" />
         <activity
-            android:name="com.mdfws.teatherus.NavigationActivity"
-            android:label="@string/title_activity_navigation" >
+            android:name="com.mdfws.teatherus.NavigationDemo"
+            android:label="@string/app_name"
+    		android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
